# aimonkapp

./: .gitignore
backend/: pyproject.toml
backend/src/fastapi_neon/: main.py  settings.py
backend/src/fastapi_neon/models/: model.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: TreeManager.tsx  TreeNode.tsx
frontend/src/types/: tree.ts
